# quic-echo

./: .gitlab-ci.yml  .gitmodules  README.md  cli.c  connection.c  connection.h  gnutls-glue.c  gnutls-glue.h  meson.build  plaintext.c  plaintext.h  serv.c  stream.c  stream.h  utils.c  utils.h
credentials/: ca.pem  server.pem
demo-scripts/: cli.sh  serv.sh  tshark.sh
subprojects/: ngtcp2.patch
